# Dinner-Box-Docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
food_proj/food_app/food_app/: settings.py  urls.py
food_proj/food_app/get_food/: apps.py  tests.py  views.py
food_proj/food_app/notes/: views.py
food_proj/food_app/users/: db_operations.py  tests.py  views.py
food_proj/food_app/users/static/css/: styles.css
food_proj/food_app/users/static/js/: scripts.js
food_proj/food_app/users/templates/: base.html  create_note.html  dashboard.html  food_finder.html  home.html  note_viewer.html  personal_food_picker.html
food_proj/food_app/users_token/: apps.py  models.py  views.py
food_proj/food_app/users_token/templates/: login.html
tests/: test_food_proj.py
