[tool.poetry]
name = "food_proj"
version = "0.1.0"
description = ""
authors = ["omanduj <omanduj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
PyJWT = "^2.3.0"
requests = "^2.26.0"
djongo = "^1.3.6"
pymongo = "3.12.1"
passlib = "^1.7.4"
geocoder = "^1.38.1"
geopy = "^2.2.0"
pytest = "^6.2.5"
Flask-SocketIO = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
